# Fund-Real-Time-Valuation

./: .gitignore  =0.80.5  AGENTS.md  CHANGELOG.md  CLAUDE.md  DATA_DICTIONARY.md  README.md  coverage.json  dump.rdb  package.json  pyproject.toml  requirements.txt  run.sh  run_api.py  run_app.py  run_celery.py  run_celery_beat.py  run_gui.py  run_tui.py
.claude/: hookify.check-yaml-structure.local.md  hookify.prevent-direct-api-calls.local.md  hookify.protect-config-directory.local.md  hookify.require-source-suffix.local.md  settings.json
.github/workflows/: code-quality.yml  e2e-tests.yml
.opencode/plans/: system-improvement-plan.md
.sisyphus/plans/: create-agents-md.md
api/: __init__.py  dependencies.py  dependencies_impl.py  main.py  models.py
api/routes/: __init__.py  bonds.py  cache.py  commodities.py  datasource.py  funds.py  holidays.py  indices.py  news.py  overview.py  sectors.py  sentiment.py  stocks.py  trading_calendar.py  websocket.py
api/routes/commodities/: __init__.py  commodities_data.py  commodities_watchlist.py
api/routes/funds/: __init__.py  funds_data.py  funds_holdings.py  funds_watchlist.py
docs/: API.md  KNOWN_ISSUES.md  README.md  data-source-performance-report.md  data-sources-hk-index-minute-research.md  data-sources-index-minute-research.md  data-sources-index-research.md  database-design.md  performance-evaluation.md  rest-api.md
docs/adr/: ADR-000-index.md  README.md
docs/api/: index.html  search.js
docs/architecture/: README.md  module-design.md  system-architecture.md
docs/guides/: README.md
docs/plans/: 2026-02-03-data-aggregation-analysis.md  2026-02-03-fix-issues.md  2026-02-03-fund-tui-design.md  2026-02-03-tui-redesign.md  2026-02-04-tui-enhancement.md  2026-02-05-core-optimization.md  2026-02-05-progress.md  2026-02-09-web-frontend-design.md  2026-02-11-kline-chart.md  2026-02-13-index-card-delay-tag-design.md  2026-02-13-index-card-delay-tag-implementation.md  2026-02-13-index-card-time-display-improvement.md  2026-02-13-index-card-time-implementation.md  2026-03-06-fund-realtime-estimate.md  README.md  commodity-watchlist-design.md  fund-holding-management-design.md  qdii-fund-card-optimization.md
docs/plans/ARCHIVE/: 2025-02-05-project-roadmap.md  2026-02-01-api-docs-deprecated.md  2026-02-03-data-source-validation.md  2026-02-03-data-sources-expansion.md  2026-02-05-performance-evaluation-flet.md  2026-02-11-funds-holding-first-sort.md  2026-02-12-commodity-category-design.md  2026-02-15-fund-holding-management-cancelled.md  README.md  fund-data-persistence-cache-design.md  playwright-testing-strategy.md
examples/: commodities.yaml.example  config.yaml.example  funds.yaml.example
research/: research_akshare_realtime.py  test_akshare_optimized.py  test_eastmoney_minute.py  test_fund_consistency.py  test_hk_index_minute.py  test_index_minute_data.py  ui-debug.ts
research/output/: akshare_research_report_20260307_094127.md
screenshots/: console-log-final.txt  kline-all-console.txt  kline-network.txt
scripts/: sync_fund_info.py  test_eastmoney_minute.py  update_fund_info.py
scripts/output/: akshare_research_data_20260307_094127.json
src/: __init__.py
src/config/: __init__.py  base.py  commodities_config.py  manager.py  models.py  trading_hours_config.py
src/datasources/: AGENTS.md  DESIGN.md  IMPLEMENTATION_PLAN.md  __init__.py  aggregator.py  akshare_config.py  akshare_sentiment_source.py  base.py  bond_source.py  cache.py  cache_cleaner.py  cache_warmer.py  commodity_source.py  crypto_source.py  dual_cache.py  failover_manager.py  fund_source.py  gateway.py  health.py  hot_backup.py  index_source.py  manager.py  news_source.py  portfolio.py  qdii_estimator.py  qdii_index_map.py  sector_source.py  source_registry.py  stock_source.py  trading_calendar_source.py  unified_models.py
src/datasources/commodity/: __init__.py  aggregator.py  akshare_source.py  base.py  foreign_source.py  yfinance_source.py
src/datasources/fund/: __init__.py  cache_strategy.py  fund123_client.py  fund123_source.py  fund_backup_sources.py  fund_base_source.py  fund_cache_helpers.py  fund_concept_service.py  fund_history_source.py  fund_industry_service.py  fund_info_db.py  fund_info_utils.py  fund_net_value.py  fund_trading_helpers.py  (+2 more)
src/db/: AGENTS.md  __init__.py  commodity_intraday_dao.py  commodity_repo.py  config_dao.py  database.py  index_intraday_dao.py  models.py  news_dao.py
src/gui/: AGENTS.md  __init__.py  chart.py  check_deps.py  components.py  detail.py  empty_states.py  error_handling.py  main.py  notifications.py  settings.py  theme.py
src/tasks/: __init__.py  cache_tasks.py  config.py  fund_tasks.py  health_tasks.py  push_tasks.py
src/ui/: __init__.py  app.py  charts.py  dialogs.py  fund_detail_screen.py  menus.py  models.py  screens.py  styles.tcss  tables.py  widgets.py
src/utils/: __init__.py  colors.py  export.py  log_buffer.py  realtime_pusher.py  websocket_manager.py
tests/: AGENTS.md  conftest.py  test_aggregator.py  test_akshare_commodity.py  test_akshare_sector.py  test_akshare_sentiment.py  test_api_funds.py  test_api_indices.py  test_api_models.py  test_api_overview.py  test_api_routes.py  test_api_sectors.py  test_api_websocket.py  test_baostock.py  test_bond_source.py  test_cache.py  test_cache_cleaner.py  test_cache_strategy.py  test_cache_warmer.py  test_check_deps.py  test_circuit_breaker.py  test_colors.py  test_commodities_config.py  test_commodity_repo.py  test_config.py  test_crypto_source.py  test_database.py  test_datasource_base.py  test_datasource_health.py  test_datasource_performance.py  test_datasources.py  test_dual_cache.py  test_empty_states.py  test_error_handling.py  test_estimate_change.py  test_export.py  test_fund123_client.py  test_fund_source.py  test_gateway.py  test_gateway_models.py  (+22 more)
web/: UI_DESIGN.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/e2e/: playwright.config.ts  playwright.screenshot.config.ts  tsconfig.json  ui-debug-fixed.ts
web/src/: App.vue  env.d.ts  main.ts
(+101 files in other folders)
