[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fund-real-time-valuation"
version = "0.1.0"
description = "基金实时估值 GUI 应用，基于 Flet 框架"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fund Valuation Team" }
]
keywords = ["finance", "gui", "funds", "valuation", "flet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flet>=0.80.5",
    "akshare>=1.10.0",
    "yfinance>=0.2.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.2",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
fund-gui = "run_gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

# 忽略 Flet 库的类型存根问题（因为 Flet 类型存根与实际实现不一致）
[[tool.mypy.overrides]]
module = [
    "flet",
    "flet.*",
]
ignore_errors = true

# 忽略 src.gui 模块中的 Flet 相关类型错误
[[tool.mypy.overrides]]
module = "src.gui.*"
disable_error_code = [
    "arg-type",
    "union-attr",
    "attr-defined",
    "operator",
    "list-item",
    "has-type",
    "valid-type",
    "assignment",
    "call-arg",
    "var-annotated",
    "return-value",
]

# 忽略 src.datasources 模块中的类型问题（主要是第三方库 API 类型不一致）
[[tool.mypy.overrides]]
module = "src.datasources.*"
disable_error_code = [
    "arg-type",
    "union-attr",
    "attr-defined",
    "operator",
    "index",
    "misc",
    "call-arg",
    "assignment",
    "return-value",
]

