[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fund-real-time-valuation"
version = "0.1.0"
description = "基金实时估值 Web 应用，基于 Vue 3 + FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fund Valuation Team" }
]
keywords = ["finance", "funds", "valuation", "fastapi", "vue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "akshare>=1.10.0",
    "yfinance>=0.2.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.2",
    "matplotlib>=3.7.0",
    # FastAPI 后端依赖
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

# 忽略第三方库的类型存根问题
[[tool.mypy.overrides]]
module = [
    "akshare",
    "yfinance",
    "matplotlib",
    "pandas",
    "numpy",
]
ignore_errors = true

# 忽略 src.datasources 模块中的类型问题
[[tool.mypy.overrides]]
module = "src.datasources.*"
disable_error_code = [
    "arg-type",
    "union-attr",
    "attr-defined",
    "operator",
    "index",
    "misc",
    "call-arg",
    "assignment",
    "return-value",
]
