[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fund-real-time-valuation"
version = "0.1.0"
description = "基金实时估值 Web 应用，基于 Vue 3 + FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fund Valuation Team" }
]
keywords = ["finance", "funds", "valuation", "fastapi", "vue", "stock", "market", "realtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "akshare>=1.10.0",
    "yfinance>=0.2.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.2",
    "matplotlib>=3.7.0",
    "holidays>=0.40",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # mini-racer 版本对齐方案:
    # - mini-racer 0.14.x 导出的符号从 mr_eval 改为 mr_eval_context，与 py_mini_racer 0.6.0 不兼容
    # - 解决方案：固定使用兼容版本
    #   * macOS/Windows: 使用 mini-racer 0.13.x（最后稳定版）
    #   * Linux: 使用 py-mini-racer（官方推荐）
    # - 兼容矩阵:
    #   mini-racer 0.12.4-0.13.x + py_mini_racer 0.6.0 ✓
    #   mini-racer 0.14.x + py_mini_racer 0.6.0 ✗ (符号不匹配)
    "mini-racer>=0.12.4,<0.14; platform_system != 'Linux'",
    "py-mini-racer>=0.6.0,<0.7; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.0",
    "types-pytz>=2024.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "research/",
    "scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "research/",
    "scripts/",
    "tests/",
]

# 忽略第三方库的类型存根问题
[[tool.mypy.overrides]]
module = [
    "akshare",
    "yfinance",
    "pandas",
    "py_mini_racer",
]
ignore_errors = true

# src.datasources 模块依赖 akshare 等返回 Any 的库
# 只禁用由第三方库类型问题导致的错误代码
[[tool.mypy.overrides]]
module = "src.datasources.*"
disable_error_code = [
    "arg-type",
    "union-attr",
    "attr-defined",
    "operator",
    "index",
    "misc",
    "call-arg",
    "assignment",
    "return-value",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
